# desktop-generator

./: .gitattributes  .gitignore  .researcher  CODE_QUALITY.md  COPYRIGHT.txt  Makefile  README.md  agents.md  api.py  generator.py  manifest.json  pyproject.toml  renderer.py  screen.py  state.py  workflow.py
.claude/: cto-progress.md  progress.md
.claude/implementation/: progress.md
.claude/plans/: 20251217-fix-taskbar-loadwait.md  kwargs-fix-propagation.md  varyn-icon-counts.md
.claude/research/: 20251217-taskbar-loadwait-failures.md  kwargs-fix-propagation.md  varyn-icon-counts.md
.claude/todos/: 20251217-fix-taskbar-loadwait.md  kwargs-fix-propagation.md
assets/annotations/: annotation.json  manifest.json
assets/annotations/frame_0003/: annotation.json
config/: dataset.test.yaml  dataset.yaml  workflow-test.yaml
modal_apps/: generate.py
models/: __init__.py
scripts/: archive.sh  build.sh  extract.sh  generate.sh  pre-commit.sh  preprocess.sh  preview.sh  production.sh  test.sh  upload.sh  verify.sh
tasks/: __init__.py  click_desktop_icon.py  click_icon.py  click_taskbar_icon.py  example_task.py  grounding_task.py  iconlist_task.py  wait_loading.py
