[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test-desktop-generator"
version = "0.1.0"
description = "CUDAG project for test-desktop-generator"
requires-python = ">=3.11"
dependencies = [
    "cudag",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
