[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-generator"
version = "0.1.0"
description = "CUDAG project for desktop screenshots"
requires-python = ">=3.11"
dependencies = [
    "cudag",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.uv.sources]
cudag = { path = "../../cudag", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
