[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desktop-generator"
version = "0.1.0"
description = "CUDAG project for desktop screenshots"
requires-python = ">=3.12"
dependencies = [
    "cudag>=0.3.12",
    "pillow>=10.0.0",
]

[tool.uv.sources]
cudag = { path = "../../cudag", editable = true }

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
